--- a/style.css
+++ b/style.css
@@ -3,16 +3,33 @@
   height: 50px;
 }
 .api-res-cont {
+  position: absolute;
+  top: 5rem;
+  left: 15rem;
   display: grid;
+  gap: 10px;
   grid-template-columns: repeat(2, 1fr);
   float: left;
-  width: 10rem;
-  height: 40rem;
+  width: 13rem;
+  height: 15rem;
   border: 1px solid black;
+  -ms-overflow-style: none; /* for Internet Explorer, Edge */
+  scrollbar-width: none; /* for Firefox */
   overflow-y: scroll;
+  scrollbar-width: none;
   cursor: pointer;
 }
-.testing {
+.api-res-cont::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
+}
+.set-image {
   width: 100%;
   height: 100%;
 }
+/* .gif-dom {
+  position: absolute;
+  top: 5rem;
+  background-color: blue;
+  width: 10rem;
+  height: 10rem;
+} */
