--- a/style.css
+++ b/style.css
@@ -1,11 +1,68 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap');
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
+}
+body {
+  background-color: burlywood;
+}
+.main-container {
+  position: relative;
+  top: 2rem;
+  margin: auto;
+  width: 30rem;
+  height: 45rem;
+  filter: brightness(45%);
+}
+.main-container img {
+  width: 100%;
+  height: 100%;
+}
+.form-container {
+  background-color: white;
+  position: absolute;
+  border: 1px solid black;
+  top: 3rem;
+  left: 23%;
+  width: 29rem;
+  height: 20rem;
+}
+span input {
+  position: absolute;
+  top: 3.5rem;
+  left: 12.5rem;
+  width: 28.5rem;
+  height: 16rem;
+  z-index: 1;
+}
+.show {
+  position: absolute;
+  top: 20rem;
+  left: 14rem;
+  width: 10rem;
+  height: 2rem;
+  border-radius: 20px;
+  border: none;
+  background-color: rgb(113, 152, 224);
+  z-index: 1;
+}
+.remove {
+  display: none;
+}
+/* js ctrls */
 .api-input {
-  width: 50rem;
-  height: 50px;
+  position: absolute;
+  top: 19.5rem;
+  left: 2rem;
+  width: 10rem;
+  height: 2rem;
 }
 .api-res-cont {
   position: absolute;
-  top: 5rem;
-  left: 15rem;
+  top: 21.5rem;
+  left: 2rem;
   display: grid;
   gap: 10px;
   grid-template-columns: repeat(2, 1fr);
@@ -13,23 +70,27 @@
   width: 13rem;
   height: 15rem;
   border: 1px solid black;
-  -ms-overflow-style: none; /* for Internet Explorer, Edge */
-  scrollbar-width: none; /* for Firefox */
+  -ms-overflow-style: none;
+  scrollbar-width: none;
   overflow-y: scroll;
   scrollbar-width: none;
   cursor: pointer;
+  padding: 5px;
+  background-color: rgb(212, 236, 162);
 }
 .api-res-cont::-webkit-scrollbar {
-  display: none; /* for Chrome, Safari, and Opera */
+  display: none;
 }
 .set-image {
   width: 100%;
   height: 100%;
 }
-/* .gif-dom {
+.gif-dom {
   position: absolute;
-  top: 5rem;
+  top: 7rem;
+  left: 29rem;
   background-color: blue;
   width: 10rem;
   height: 10rem;
-} */
+  z-index: 1;
+}
